--- a/style.css
+++ b/style.css
@@ -240,6 +240,11 @@ section{
     color: #3a6cf4;
 }
 
+div a{
+    text-decoration: none;
+    color: black;
+}
+
 
 @media (max-width:1023px){
     header{
